# beyond_fit_app

./: .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PIPELINE_REPORT.md  PLAN.md  Plan.md  README.md  RUN.md  RUNBOOK.md  WORKFLOWS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_profile_snapshot_and_plan_versioning.py  0003_safety_fields.py  0004_checkin_table.py  0005_nutrition_tables.py  0006_clientprofile_email.py  0007_clientprofile_name_pending_created_at.py  0008_production_usability.py  0009_round2_usability.py  0010_add_password_hash.py  0011_coach_role.py  0012_rejection_feedback.py  0013_email_verification.py  0014_coach_invite.py  0015_set_log_feedback.py  0016_audit_event.py  0017_subscription_and_roles.py  0018_pendingapproval_chat_id_bigint.py  0019_chatbinding_primary_unique.py  0020_client_baseline_e1rm.py  0021_client_exercise_ability.py  0022_client_question.py
app/: bot.py  container.py  database.py  exercise_db.py  generator.py  main.py  models.py  routes.py  settings.py
app/api/: admin.py  auth.py  checkin.py  coach.py  feedback.py  (+6 more)
docs/: PRIVACY_POLICY.md  RUNBOOK_BOT_ONLY.md  STORE_LISTING.md  TERMS.md  TESTING_GUIDE.md
mobile/: README.md  pubspec.yaml
prompts/: checkin_digest.j2  checkin_extract.j2
scripts/: backup_db.sh  deploy.sh  generate_secret.py  health_check.sh  promote_admin.py
tests/: conftest.py  test_ability_intake.py  test_ability_module.py  test_ability_selection.py  test_account_delete_pii.py  test_add_core.py  test_admin_approve_flow.py  test_admin_id_resolver.py  test_api.py  test_bodyweight_floor.py  test_bodyweight_main_checkin.py  test_bot_authz.py  test_bot_flow.py  test_checkin.py  test_checkin_catalog_ids.py  test_checkin_filter.py  test_coach_apply_flow.py  test_coach_edit_validation.py  test_coach_picker.py  test_coach_scope.py  test_diet_style_balanced.py  test_difficulty_tiers.py  test_equipment_guard.py  test_equipment_intake.py  test_equipment_module.py  test_error_handler.py  test_exercise_db_integrity.py  test_gate_audit.py  test_generate_auth.py  test_generator.py  test_generator_hardening.py  test_injury_substitution.py  test_jwt_token_types.py  test_loadseed.py  test_macros_goal.py  test_meal_builder_slots.py  test_meal_rotation.py  test_mobile_api.py  test_nutrition.py  test_nutrition_halal.py  (+14 more)
(+103 files in other folders)
