[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beyond-fit-app"
version = "0.1.0"
description = "Deterministic Coaching Engine Backend"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "openai",
    "python-dotenv",
    "python-telegram-bot",
    "markdown2",
    "weasyprint",
    "sqlmodel",
    "psycopg2-binary",
    "jinja2",
    "tomli; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "instructor",
    "pulp",
    "alembic",
    "pytest-golden"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["app/adapters", "app/services", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
