[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beyond-fit-app"
version = "0.1.0"
description = "Deterministic Coaching Engine Backend"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "openai>=1.30,<2",
    "python-dotenv",
    "python-telegram-bot>=22.7,<23",
    "markdown2",
    "weasyprint>=62.0,<63",
    "sqlmodel>=0.0.21,<1",
    "psycopg2-binary",
    "jinja2",
    "tomli; python_version < '3.11'",
    "alembic>=1.13,<2",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "instructor",
    "pulp",
    "alembic",
    "pytest-golden"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["app/adapters", "app/services", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
